# midas-journal-799

DirectionalGradient/: CMakeLists.txt  README  itkCovariantInnerProductImageFilter.h  itkDirectionalGradientImageFilter.h  itkDirectionalGradientImageFilter.txx  label_overlay.cxx  testDirectional.cxx  testStandard.cxx
DirectionalGradient/Modules/parabolicMorphology/: itkBinaryDilateParaImageFilter.h  itkBinaryErodeParaImageFilter.h  itkBinaryErodeParaImageFilter.txx
DirectionalGradient/article/: Article.tex  Makefile  local.bib
